<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383449"
    tools:context="com.skyroam.x2app.X2AppMainActivity" >
    
    
    <ImageButton
        android:id="@+id/startVirtualSimImageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:adjustViewBounds="true"
        android:background="@drawable/play"
        android:contentDescription="@string/startVirtualSim"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:visibility="visible" />

    <Button
        android:id="@+id/baiduRelaybutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:focusableInTouchMode="true"
        android:text="@string/baiduRelay"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/virtualSimprogressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tiptextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/virtualSimprogressBar1"
        android:layout_centerHorizontal="true"
        android:text="@string/startingVirtualSim"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/stopVirtualSimImageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:background="@drawable/stop"
        android:contentDescription="@string/stopVirtualSim"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/loadingprogressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="33dp"
        android:contentDescription="@string/working"
        android:visibility="invisible" />

</RelativeLayout>