<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:animateLayoutChanges="false"
  tools:context=".LauncherActivity"
  android:id="@+id/launcher_activity" >
  <ImageView
    android:id="@+id/wallpaper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.88"
    android:clickable="true"
    android:contentDescription="@string/backgroundImage"
    android:focusable="true"
    android:scaleType="centerCrop"
    android:src="@drawable/stopusingphone"
    android:visibility="invisible" />
  <ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.2"
    android:background="@android:color/black"
    android:contentDescription="@string/darkBackgroundImage"
    tools:visibility="visible" />
  <ImageView
    android:id="@+id/shareIcon"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:alpha="1"
    android:background="@drawable/t2796912000512"
    android:clickable="true"
    android:contentDescription="@string/backgroundImage"
    android:layout_alignParentRight="true"
    android:layout_marginRight="18dp"
    android:layout_marginTop="28dp"
    android:layout_alignParentTop="true"
    android:focusable="true"
    android:scaleType="centerCrop"
    android:visibility="visible" />
  <Button
    android:id="@+id/removeSimilarApplicationsButtonon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/shareIcon"
    android:layout_alignParentRight="true"
    android:text="@string/removeSimilarApplications"
    android:visibility="visible"
  />
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/articleListmy_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="false"
    android:layout_alignParentLeft="false"
    android:layout_alignParentTop="false"
    android:visibility="invisible"
    android:scrollbars="vertical" />
  <com.andexert.library.RippleView
    android:id="@+id/launchRipple"
    app:rv_rippleDuration="100"
    app:rv_color="#170358"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:visibility="visible" >
    <ImageView
      android:id="@+id/applicationIconrightimageView2"
      android:layout_width="128dp"
      android:layout_height="128dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="false"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="false"
      android:adjustViewBounds="true"
      android:src="@drawable/vector_66_11"
      android:contentDescription="@string/applicationIcon"
      android:layout_centerHorizontal="true" />
    <TextView
      android:id="@+id/rightTextoperationMethodactTitletextView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="false"
      android:layout_alignParentLeft="false"
      android:layout_alignParentStart="false"
      android:layout_alignParentRight="false"
      android:layout_alignParentEnd="false"
      android:layout_alignParentTop="false"
      android:text="@string/empty"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/applicationIconrightimageView2"
      android:gravity="center_horizontal"
      style="@style/AudioFileInfoOverlayText"
      android:background="@drawable/back" />
    <TextView
      android:id="@+id/clickToGetRandomApplication2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="false"
      android:layout_alignParentLeft="false"
      android:layout_alignParentStart="false"
      android:layout_alignParentRight="false"
      android:layout_alignParentEnd="false"
      android:layout_alignParentTop="false"
      android:text="@string/clickTheIconToGetRandomApplication"
      android:layout_centerHorizontal="true"
      android:layout_below="@+id/rightTextoperationMethodactTitletextView2"
      android:gravity="center_horizontal"
      style="@style/AudioFileInfoOverlayText"
      android:background="@drawable/back" />
  </com.andexert.library.RippleView>
  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="0.2"
    android:background="@android:color/black"
    android:contentDescription="@string/darkBackgroundImage"
    android:layout_alignLeft="@id/voiceAssistantLayout"
    android:layout_alignRight="@id/voiceAssistantLayout"
    android:layout_alignTop="@id/voiceAssistantLayout"
    android:layout_alignBottom="@id/voiceAssistantLayout"
    tools:visibility="visible" />
  
  
    <Button
    android:id="@+id/changeApplicationButtonion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/launchRipple"
    android:layout_centerHorizontal="true"
    android:text="@string/openApplication"
      android:visibility="invisible"
  />

      <Button
    android:id="@+id/doneButtonn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/changeApplicationButtonion"
    android:layout_centerHorizontal="true"
    android:text="@string/done"
        android:visibility="invisible"
  />
  <TextView
    android:id="@+id/statustextView"
    android:layout_below="@+id/doneButtonn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="false"
    android:layout_alignParentLeft="false"
    android:textColor="@color/yellow"
      android:text="@string/installing"
      android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:textSize="28sp" />

  
  <RelativeLayout
    android:id="@+id/voiceAssistantLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginLeft="48dp"
    android:layout_marginBottom="48dp"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="auto"
    android:focusableInTouchMode="true">
    <ImageView
      android:id="@+id/microphoneIcon"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:alpha="1"
      android:background="@drawable/n962606"
      android:clickable="true"
      android:contentDescription="@string/backgroundImage"
      android:focusable="true"
      android:scaleType="centerCrop"
      android:visibility="invisible" />
    <ImageView
      android:id="@+id/hitApplicationIcon"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_toRightOf="@id/microphoneIcon"
      android:alpha="1"
      android:contentDescription="@string/darkBackgroundImage"
      android:scaleType="centerCrop"
      android:visibility="invisible" />
    <TextView
      android:layout_toRightOf="@id/hitApplicationIcon"
      android:layout_centerVertical="true"
      android:id="@+id/applicationNameTextView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="false"
      android:layout_alignParentLeft="false"
      android:layout_alignParentStart="false"
      android:layout_alignParentRight="false"
      android:layout_alignParentEnd="false"
      android:layout_alignParentTop="false"
      android:text="@string/empty"
      style="@style/AudioFileInfoOverlayText"
      android:background="@drawable/back" />
  </RelativeLayout>
  <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="28dp"
    android:progressDrawable="@drawable/progress_horizontal1"
    android:layout_height="18dp"
    android:indeterminate="true"
    android:visibility="invisible" />
</RelativeLayout>
