<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="158"
    android:background="#F4F4F4"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/storename"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/gpsNotEnbldPlsEnblGpsOrWfLctn"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:alpha="158"
            android:dividerPadding="@dimen/standard_padding"
            android:gravity="center_horizontal"
            android:showDividers="middle" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:alpha="158"
                android:background="@color/black"
                android:onClick="gotoLocationServiceSetting"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/goAndEnableLocationService"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:onClick="noEnableLocationService"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/noNotEnableLocationService"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>