<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:animateLayoutChanges="false"
  android:theme="@android:style/Theme.Wallpaper"
  tools:context=".LauncherActivity"
  android:id="@+id/launcher_activity" >
  <ImageView
    android:id="@+id/wallpaper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.88"
    android:clickable="true"
    android:contentDescription="@string/backgroundImage"
    android:focusable="true"
    android:scaleType="centerCrop"
    android:src="@drawable/finding1361"
    android:visibility="visible"
    tools:visibility="visible" />
  <com.andexert.library.RippleView
    android:id="@+id/launchRipple"
    android:layout_centerVertical="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:rv_color="#170358"
    app:rv_rippleDuration="100">
    <ImageView
      android:id="@+id/applicationIconrightimageView2"
      android:layout_width="128dp"
      android:layout_height="128dp"
      android:layout_alignParentStart="false"
      android:layout_alignParentLeft="true"
      android:layout_marginLeft="48dp"
      android:layout_marginRight="48dp"
      android:layout_alignParentEnd="false"
      android:layout_alignParentRight="true"
      android:layout_centerHorizontal="true"
      android:adjustViewBounds="true"
      android:contentDescription="@string/applicationIcon"
      android:src="@drawable/vector_66_11" />
    <TextView
      android:id="@+id/rightTextoperationMethodactTitletextView2"
      style="@style/AudioFileInfoOverlayText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/applicationIconrightimageView2"
      android:layout_alignParentStart="false"
      android:layout_alignParentLeft="false"
      android:layout_alignParentTop="false"
      android:layout_alignParentEnd="false"
      android:layout_alignParentRight="false"
      android:layout_alignParentBottom="false"
      android:layout_centerHorizontal="true"
      android:background="@drawable/back"
      android:gravity="center_horizontal"
      android:textSize="28sp"
      android:text="@string/empty" />
    <TextView
      android:id="@+id/applicationName2"
      style="@style/AudioFileInfoOverlayText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/rightTextoperationMethodactTitletextView2"
      android:layout_alignParentStart="false"
      android:layout_alignParentLeft="false"
      android:layout_alignParentTop="false"
      android:layout_alignParentEnd="false"
      android:layout_alignParentRight="false"
      android:layout_alignParentBottom="false"
      android:layout_centerHorizontal="true"
      android:background="@drawable/back"
      android:gravity="center_horizontal"
      android:textSize="28sp"
      android:textColor="@color/green"
      android:text="@string/empty" />
    <TextView
      android:id="@+id/statustextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="false"
      android:layout_alignParentLeft="false"
      android:layout_below="@+id/applicationName2"
      android:textColor="@color/yellow"
      android:layout_centerHorizontal="true"
      android:textSize="28sp" />
  </com.andexert.library.RippleView>
  <ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.4"
    android:background="@android:color/black"
    android:contentDescription="@string/darkBackgroundImage" />
  <ImageView
    android:id="@+id/shareIcon"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:alpha="1"
    android:background="@drawable/t2796912000512"
    android:clickable="true"
    android:contentDescription="@string/backgroundImage"
    android:layout_alignParentRight="true"
    android:layout_marginRight="18dp"
    android:layout_marginTop="28dp"
    android:layout_alignParentTop="true"
    android:focusable="true"
    android:scaleType="centerCrop"
    android:visibility="visible" />
  <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_below="@+id/launchRipple"
    android:progressDrawable="@drawable/progress_horizontal1"
    android:visibility="invisible" />
  <RelativeLayout
    android:id="@+id/textProgresstantLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@id/progressBar"
    android:layout_marginRight="8dp"
    android:alwaysDrawnWithCache="false"
    android:visibility="invisible" 
    >
    <TextView
      android:id="@+id/downloadedmbionView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@id/slashnView"
      android:textColor="@color/textDownloadProgress"
      android:text="@string/empty"
      android:textSize="18sp" />
    <TextView
      android:id="@+id/slashnView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@id/totalmbsionView"
      android:textColor="@color/textDownloadProgress"
      android:text="@string/slash"
      android:textSize="18sp" />
    <TextView
      android:id="@+id/totalmbsionView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@id/mbsionView"
      android:textColor="@color/textDownloadProgress"
      android:text="@string/empty"
      android:textSize="18sp" />
    <TextView
      android:id="@+id/mbsionView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:textColor="@color/textDownloadProgress"
      android:text="@string/mb"
      android:textSize="18sp" />
  </RelativeLayout>
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/articleListmy_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="false"
    android:layout_alignParentLeft="false"
    android:layout_alignParentTop="false"
    android:scrollbars="vertical" />
  <RelativeLayout
    android:id="@+id/voiceAssistantLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginLeft="48dp"
    android:layout_marginBottom="48dp"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="auto"
    android:focusableInTouchMode="true">
    <ImageView
      android:id="@+id/microphoneIcon"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:alpha="1"
      android:background="@drawable/n962606"
      android:clickable="true"
      android:contentDescription="@string/backgroundImage"
      android:focusable="true"
      android:scaleType="centerCrop"
      android:visibility="visible" />
    <ImageView
      android:id="@+id/hitApplicationIcon"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_toRightOf="@id/microphoneIcon"
      android:alpha="1"
      android:contentDescription="@string/darkBackgroundImage"
      android:scaleType="centerCrop"
      android:background="@drawable/n94cbbemtg"
      android:visibility="invisible" />
    <TextView
      android:id="@+id/newVersionView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="false"
      android:layout_alignParentLeft="false"
      android:textColor="@color/yellow"
      android:layout_toRightOf="@id/hitApplicationIcon"
      android:textSize="28sp" />
  </RelativeLayout>
</RelativeLayout>
